--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -2557,3 +2557,8 @@ ul.bottom_menu li {
 .poiter-crusor:hover {
     cursor: pointer;
 }
+
+.btn-tabs {
+    background: white;
+    border: 1px double #00000017;
+}
